examples/bad/06-runtime_error_zero_div.ez
rememberCholerae : Integer -> Integer;
rememberCholerae x = x / 0;

main : Integer ;
main = rememberCholerae 13;
